Added results plots Added Factory design pattern for craeting strategy specific multipath clients. Modified experiments to be morer realistic and contain scaling competing sources to occupy the whole network Fixed maxPackets and packetSize attributes to not be bound by 1500

--- a/src/nada/CMakeLists.txt
+++ b/src/nada/CMakeLists.txt
@@ -3,6 +3,15 @@ set(source_files
   nada-header.cc
   nada-udp-client.cc
   mp-nada-client.cc
+  video-receiver.cc
+  agg-path-nada.cc
+  mp-nada/mp-best.cc
+  mp-nada/mp-buffer.cc
+  mp-nada/mp-factory.cc
+  mp-nada/mp-frame.cc
+  mp-nada/mp-nada-base.cc
+  mp-nada/mp-rr.cc
+  mp-nada/mp-weighted.cc
 )
 
 set(header_files
@@ -10,6 +19,15 @@ set(header_files
   nada-header.h
   nada-udp-client.h
   mp-nada-client.h
+  video-receiver.h
+  agg-path-nada.h
+  mp-nada/mp-best.h
+  mp-nada/mp-buffer.h
+  mp-nada/mp-factory.h
+  mp-nada/mp-frame.h
+  mp-nada/mp-nada-base.h
+  mp-nada/mp-rr.h
+  mp-nada/mp-weighted.h
 )
 
 build_lib(
